--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>p5.js example</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="p5/p5.js"></script>
-    <script src="p5/p5.sound.min.js"></script>
-    <script src="sketch.js"></script>
+    <link rel="stylesheet" href="pelda/style.css">
 </head>
 
 <body>
+    <a href="pelda/index.html">Pushypush</a>
 </body>
 
 </html>
