--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="pelda/index.html">Pushypush</a>
+    <a href="template/index.html">Pushypush</a>
 </body>
 
 </html>
