--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5.js example</title>
+    <title>fszt2020</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,13 +31,13 @@
                 </a>
                 <div class="centered_name">Ingrid</div>
             </div>
-        </div>
-        <div class="column">
             <div class="img_box" id="laura">
                 <a href="laura/index.html"><img src="laura/background.png" onerror="this.src='error.png'">
                 </a>
                 <div class="centered_name">Laura</div>
             </div>
+        </div>
+        <div class="column">
             <div class="img_box" id="levi">
                 <a href="levi/index.html"><img src="levi/background.png" onerror="this.src='error.png'">
                 </a>
@@ -53,8 +53,6 @@
                 </a>
                 <div class="centered_name">Máté</div>
             </div>
-        </div>
-        <div class="column">
             <div class="img_box" id="oliver">
                 <a href="oliver/index.html"><img src="oliver/katyuzos%20jatek/background.png" onerror="this.src='error.png'">
                 </a>
@@ -65,6 +63,8 @@
                 </a>
                 <div class="centered_name"> Panni </div>
             </div>
+        </div>
+        <div class="column">
             <div class="img_box" id="pisti">
                 <a href="pisti/index.html"><img src="pisti/BG_SKIN.png" onerror="this.src='error.png'">
                 </a>
@@ -75,8 +75,11 @@
                 </a>
                 <div class="centered_name">Sanyi</div>
             </div>
-        </div>
-        <div class="column">
+            <div class="img_box" id="tibi">
+                <a href="tibi/index.html"><img src="tibi/background.png" onerror="this.src='error.png'">
+                </a>
+                <div class="centered_name">Tibi</div>
+            </div>
             <div class="img_box" id="pelda">
                 <a href="template/index.html"><img src="template/background.png" onerror="this.src='error.png'">
                 </a>
