added back button

--- a/index.html
+++ b/index.html
@@ -9,82 +9,123 @@
 </head>
 
 <body>
-    <div class="row">
-        <div class="column">
-            <div class="img_box" id="alina">
-                <a href="alina/index.html"><img src="alina/background.png" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name">Alina</div>
-            </div>
-            <div class="img_box" id="almos">
-                <a href="almos/index.html"><img src="almos/background.jpg" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name">Álmos</div>
-            </div>
-            <div class="img_box" id="emese">
-                <a href="emese/index.html"><img src="emese/background0.png" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name">Emese</div>
-            </div>
-            <div class="img_box" id="ingrid">
-                <a href="Ingrid/index.html"><img src="ingrid/background.jpg" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name">Ingrid</div>
-            </div>
-            <div class="img_box" id="laura">
-                <a href="laura/index.html"><img src="laura/background.png" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name">Laura</div>
-            </div>
-        </div>
-        <div class="column">
-            <div class="img_box" id="levi">
-                <a href="levi/index.html"><img src="levi/background.png" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name">Levi</div>
-            </div>
-            <div class="img_box" id="mano">
-                <a href="mano/index.html"><img src="mano/Back.png" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name">Manó</div>
-            </div>
-            <div class="img_box" id="mate">
-                <a href="mate/index.html"><img src="mate/background.png" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name">Máté</div>
-            </div>
-            <div class="img_box" id="oliver">
-                <a href="oliver/index.html"><img src="oliver/katyuzos%20jatek/background.png" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name">Olivér</div>
-            </div>
-            <div class="img_box" id="panni">
-                <a href="panni/index.html"><img src="panni/background.png" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name"> Panni </div>
-            </div>
-        </div>
-        <div class="column">
-            <div class="img_box" id="pisti">
-                <a href="pisti/index.html"><img src="pisti/BG_SKIN.png" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name">Pisti</div>
-            </div>
-            <div class="img_box" id="sanyi">
-                <a href="sanyi/index.html"><img src="sanyi/background.png" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name">Sanyi</div>
-            </div>
-            <div class="img_box" id="tibi">
-                <a href="tibi/index.html"><img src="tibi/background.png" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name">Tibi</div>
-            </div>
-            <div class="img_box" id="pelda">
-                <a href="template/index.html"><img src="template/background.png" onerror="this.src='error.png'">
-                </a>
-                <div class="centered_name">Példa</div>
-            </div>
+    <div id="title">
+        <div id="centered_title">
+            fszt2020
         </div>
     </div>
+    <ul>
+        <li>
+            <div class="img_box" id="alina">
+                <a href="alina/index.html">
+                    <img src="alina/background.png" onerror="this.src='error.png'">
+                    <div class="centered_label">Alina</div>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="img_box" id="almos">
+                <a href="almos/index.html">
+                    <img src="almos/background.jpg" onerror="this.src='error.png'">
+                    <div class="centered_label">Álmos</div>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="img_box" id="emese">
+                <a href="emese/index.html">
+                    <img src="emese/background0.png" onerror="this.src='error.png'">
+                    <div class="centered_label">Emese</div>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="img_box" id="ingrid">
+                <a href="Ingrid/index.html">
+                    <img src="ingrid/background.jpg" onerror="this.src='error.png'">
+                    <div class="centered_label">Ingrid</div>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="img_box" id="laura">
+                <a href="laura/index.html">
+                    <img src="laura/background.png" onerror="this.src='error.png'">
+                    <div class="centered_label">Laura</div>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="img_box" id="levi">
+                <a href="levi/index.html">
+                    <img src="levi/background.png" onerror="this.src='error.png'">
+                    <div class="centered_label">Levi</div>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="img_box" id="mano">
+                <a href="mano/index.html">
+                    <img src="mano/Back.png" onerror="this.src='error.png'">
+                    <div class="centered_label">Manó</div>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="img_box" id="mate">
+                <a href="mate/index.html">
+                    <img src="mate/background.png" onerror="this.src='error.png'">
+                    <div class="centered_label">Máté</div>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="img_box" id="oliver">
+                <a href="oliver/index.html">
+                    <img src="oliver/katyuzos%20jatek/background.png" onerror="this.src='error.png'">
+                    <div class="centered_label">Olivér</div>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="img_box" id="panni">
+                <a href="panni/index.html">
+                    <img src="panni/background.png" onerror="this.src='error.png'">
+                    <div class="centered_label">Panni</div>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="img_box" id="pisti">
+                <a href="pisti/index.html">
+                    <img src="pisti/BG_SKIN.png" onerror="this.src='error.png'">
+                    <div class="centered_label">Pisti</div>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="img_box" id="sanyi">
+                <a href="sanyi/index.html">
+                    <img src="sanyi/background.png" onerror="this.src='error.png'">
+                    <div class="centered_label">Sanyi</div>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="img_box" id="tibi">
+                <a href="tibi/index.html">
+                    <img src="tibi/background.png" onerror="this.src='error.png'">
+                    <div class="centered_label">Tibi</div>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="img_box" id="pelda">
+                <a href="template/index.html">
+                    <img src="template/background.png" onerror="this.src='error.png'">
+                    <div class="centered_label">Példa</div>
+                </a>
+            </div>
+        </li>
+    </ul>
 </body></html>
