--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </li>
         <li>
             <div class="img_box" id="ingrid">
-                <a href="Ingrid/index.html">
+                <a href="ingrid/index.html">
                     <img src="ingrid/background.jpg" onerror="this.src='error.png'">
                     <div class="centered_label">Ingrid</div>
                 </a>
