--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li>
             <div class="img_box" id="alina">
                 <a href="alina/index.html">
-                    <img src="alina/background.jpg" onerror="this.src='error.png'">
+                    <img src="alina/background.png" onerror="this.src='error.png'">
                     <div class="centered_label">Alina</div>
                 </a>
             </div>
