--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li>
             <div class="img_box" id="emese">
                 <a href="emese/index.html">
-                    <img src="emese/background0.png" onerror="this.src='error.png'">
+                    <img src="emese/BACKGROUND.png" onerror="this.src='error.png'">
                     <div class="centered_label">Emese</div>
                 </a>
             </div>
